--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,12 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+
+    compile 'com.trello.rxlifecycle2:rxlifecycle:2.1.0'
+
+    // If you want to bind to Android-specific lifecycles
+    compile 'com.trello.rxlifecycle2:rxlifecycle-android:2.1.0'
+
+    // If you want pre-written Activities and Fragments you can subclass as providers
+    compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
 }
